--- a/Aura_UE_Version_5_3/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Aura_UE_Version_5_3/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -606,8 +606,8 @@ TakeRecorderMicrophoneAudioManager="\"Object\" "
 TakeRecorderAudioInputSettings="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-DebuggerAttached=True
+CleanShutdown=True
+DebuggerAttached=False
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=AnimationEditor
@@ -625,7 +625,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Classes_Game/Aura/Public/Character
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -662,6 +662,7 @@ SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
 SequenceBrowser.HiddenColumns=HasParentAsset
 SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
+ContentBrowserDrawer.JumpMRU=/All/Classes_Game/Aura/Public/Character
 ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Assets
 ContentBrowserDrawer.JumpMRU=/All/Game/Assets/Characters
@@ -2975,8 +2976,24 @@ UniversalObjectLocatorEditor.TimeStamp=2024.09.23-21.01.18
 UniversalObjectLocatorEditor.LastCompileMethod=Unknown
 GameplayCamerasEditor.TimeStamp=2024.09.23-21.02.43
 GameplayCamerasEditor.LastCompileMethod=Unknown
-Aura.TimeStamp=2024.09.23-22.24.11
+Aura.TimeStamp=2024.09.23-22.42.01
 Aura.LastCompileMethod=External
+RD.TimeStamp=2024.09.23-22.07.52
+RD.LastCompileMethod=Unknown
+RiderLink.TimeStamp=2024.09.23-22.08.12
+RiderLink.LastCompileMethod=Unknown
+RiderLogging.TimeStamp=2024.09.23-22.08.29
+RiderLogging.LastCompileMethod=Unknown
+RiderDebuggerSupport.TimeStamp=2024.09.23-22.08.15
+RiderDebuggerSupport.LastCompileMethod=Unknown
+RiderBlueprint.TimeStamp=2024.09.23-22.08.29
+RiderBlueprint.LastCompileMethod=Unknown
+RiderGameControl.TimeStamp=2024.09.23-22.08.34
+RiderGameControl.LastCompileMethod=Unknown
+RiderShaderInfo.TimeStamp=2024.09.23-22.08.17
+RiderShaderInfo.LastCompileMethod=Unknown
+RiderLC.TimeStamp=2024.09.23-22.08.21
+RiderLC.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
